--- a/uppg2.html
+++ b/uppg2.html
@@ -19,7 +19,7 @@
   </div>
   <br>
 
-  <h1>pie chart</h1>
+  <h1>pajdiagram över rumtyp</h1>
   <div id="myDiv3" style="width:80%; height:auto;"></div>
   </div>
   <br>
